--- a/lang/en.json
+++ b/lang/en.json
@@ -23,11 +23,11 @@
   "WITCHER.Profession": "Profession",
   "WITCHER.Reputation": "Reputation",
 
-  "WITCHER.Tab.Stats": "Stats",
-  "WITCHER.Tab.Abilities": "Abilities",
-  "WITCHER.Tab.Magic": "Magic",
-  "WITCHER.Tab.Inventory": "Inventory",
-  "WITCHER.Tab.Background": "Background",
+  "WITCHER.TabStats": "Stats",
+  "WITCHER.TabAbilities": "Abilities",
+  "WITCHER.TabMagic": "Magic",
+  "WITCHER.TabInventory": "Inventory",
+  "WITCHER.TabBackground": "Background",
 
   "WITCHER.Stats": "Stats",
   "WITCHER.AbbrInt": "INT",
@@ -50,13 +50,23 @@
   "WITCHER.AbbrPunch": "Punch",
   "WITCHER.AbbrKick": "Kick",
 
-  "WITCHER.SkInt": "Intelligence",
-  "WITCHER.SkRef": "Reflex",
-  "WITCHER.SkDex": "Dexterity",
-  "WITCHER.SkBody": "Body",
-  "WITCHER.SkEmp": "Empathy",
-  "WITCHER.SkCra": "Craft",
-  "WITCHER.SkWill": "Will",
+  "WITCHER.StInt": "Intelligence",
+  "WITCHER.StRef": "Reflex",
+  "WITCHER.StDex": "Dexterity",
+  "WITCHER.StBody": "Body",
+  "WITCHER.StEmp": "Empathy",
+  "WITCHER.StCra": "Craft",
+  "WITCHER.StWill": "Will",
+  "WITCHER.StLuck": "Luck",
+  "WITCHER.StSpd": "Speed",
+
+  "WITCHER.DerRun": "Run",
+  "WITCHER.DerStun": "Stun",
+  "WITCHER.DerLeap": "Leap",
+  "WITCHER.DerHP": "Health Points",
+  "WITCHER.DerSta": "Stamina",
+  "WITCHER.DerEnc": "Encumbrance",
+  "WITCHER.DerRec": "Recovery",
 
   "WITCHER.SkIntAwareness": "Awareness",
   "WITCHER.SkIntBusiness": "Business",
