--- a/lang/en.json
+++ b/lang/en.json
@@ -22,12 +22,25 @@
   "WITCHER.SocialStanding": "Social Standing",
   "WITCHER.Profession": "Profession",
   "WITCHER.Reputation": "Reputation",
+  "WITCHER.Homeland": "Homeland",
+  "WITCHER.Value": "Value",
+  "WITCHER.ValuedPerson": "Valued Person",
+  "WITCHER.Affectations": "Affectations",
+  "WITCHER.Hair": "Hair Style",
+  "WITCHER.Personality": "Personality",
+  "WITCHER.Clothing": "Clothing",
+  "WITCHER.FeelingsOnPeople": "Feelings On People",
+  "WITCHER.LifeEvents": "Life Events",
+  "WITCHER.Decade": "Decade",
+  "WITCHER.Event": "Event",
 
   "WITCHER.TabStats": "Stats",
   "WITCHER.TabAbilities": "Abilities",
   "WITCHER.TabMagic": "Magic",
   "WITCHER.TabInventory": "Inventory",
   "WITCHER.TabBackground": "Background",
+  "WITCHER.TabCombat": "Combat",
+
 
   "WITCHER.Stats": "Stats",
   "WITCHER.AbbrInt": "INT",
@@ -39,6 +52,7 @@
   "WITCHER.AbbrCra": "CRA",
   "WITCHER.AbbrWill": "WILL",
   "WITCHER.AbbrLuck": "LUCK",
+  "WITCHER.AbbrVigor": "VIGOR",
   "WITCHER.DerivedStats": "Derived Stats",
   "WITCHER.AbbrStun": "STUN",
   "WITCHER.AbbrRun": "RUN",
@@ -59,6 +73,7 @@
   "WITCHER.StWill": "Will",
   "WITCHER.StLuck": "Luck",
   "WITCHER.StSpd": "Speed",
+  "WITCHER.StVigor": "Vigor",
 
   "WITCHER.DerRun": "Run",
   "WITCHER.DerStun": "Stun",
